@@ -5,6 +5,7 @@
 /etc/group
 /etc/passwd
 /etc/termcap
+/etc/urpmi
 /lib
 /lib64
 /usr
